# deepseek-tulagent

./: .gitignore  CHANGELOG-CLI.md  CHANGELOG-DESKTOP.md  CHANGELOG.md  DeepSeekFathom.spec  NOTICE  README.md  README.zh-CN.md  pyproject.toml
.air/local/evidence/: T1-reviewer.md  T1-worker.md  T2-review.md
.air/local/state/: results.jsonl  scheduler-state.json
.air/shared/plan/: plan.md  task-graph.json
.github/workflows/: windows-desktop.yml
assets/: windows-version-info.txt
scripts/: build_windows_exe.ps1  collect_third_party_licenses.py  desktop_launcher.py  prepare_desktop_build.py  windows_installer.iss
src/deepseek_tulagent/: agent.py  capabilities.py  cli.py  config.py  extensions.py  hooks.py  instructions.py  mcp.py  plugins.py  policy.py  processes.py  provider.py  session.py  skills.py  tool_contracts.py  tools.py  tui.py  ui.py  updates.py
src/deepseek_tulagent/desktop/: __init__.py  app.py
src/deepseek_tulagent/desktop/assets/: app.js  index.html  katex-fathom.css  style.css
src/deepseekfathom/: __init__.py  cli.py  desktop.py
src/deepseekfathom/_core/: agent.py  capabilities.py  cli.py  config.py  extensions.py  hooks.py  instructions.py  messages.py  native_plugins.py  plugins.py  policy.py  provider.py  reviews.py  session.py  skills.py  tool_contracts.py  tools.py  tui.py  ui.py  updates.py
src/deepseekfathom/_core/desktop/: __init__.py  app.py
src/deepseekfathom/_core/desktop/assets/: app.js  index.html  style.css
tests/: conftest.py  test_agent.py  test_brand_migration.py  test_cli_extensions.py  test_diff_ui.py  test_distribution_migration.py  test_extension_integration.py  test_extensions.py  test_extensions_ui.py  test_hooks.py  test_mcp.py  test_message_metadata.py  test_native_plugins.py  test_native_tools.py  test_plugins.py  test_processes.py  test_review_wiring.py  test_reviews.py  test_session_migration.py
