[project]
name = "deepseek-tulagent"
version = "0.1.48"
description = "A lightweight TuL-style coding agent tailored for DeepSeek's OpenAI-compatible API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
desktop = [
  "pywebview>=5.0",
]

[project.scripts]
dstul = "deepseek_tulagent.cli:main"
deepseek-tulagent = "deepseek_tulagent.cli:main"
deepseekTul = "deepseek_tulagent.cli:main"
deepseekTulDesktop = "deepseek_tulagent.desktop.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/deepseek_tulagent"]
