[project]
name = "deepseekfathom"
version = "0.1.109"
description = "A local coding agent for DeepSeek and OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "ffffff233" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27.0",
  "prompt-toolkit>=3.0.50,<4",
]

[project.optional-dependencies]
desktop = [
  "pywebview>=5.0",
]

[project.scripts]
deepseekfathom = "deepseekfathom.cli:main"
deepseekfathom-desktop = "deepseekfathom.desktop:main"

[project.urls]
Homepage = "https://github.com/ffffff233/DeepSeekFathom"
Repository = "https://github.com/ffffff233/DeepSeekFathom.git"
Issues = "https://github.com/ffffff233/DeepSeekFathom/issues"
Changelog = "https://github.com/ffffff233/DeepSeekFathom/blob/main/CHANGELOG-CLI.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/deepseekfathom"]
